--- a/experience.html
+++ b/experience.html
@@ -62,7 +62,7 @@
 
             <div class="card">
                 <h3>Teaching Assistant</h3>
-                <h4>Francis Libermann Catholic High School</h4>
+                <h4>Licensed2Learn (L2L)</h4>
                 <p class="date">Sept. 2022 – Jun. 2023</p>
                 <p class="location">Toronto, ON</p>
                 <ul>
