--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Recent roles (moved to home page) -->
         <section>
             <div class="recent-roles">
-                <div class="recent-title">recent roles:</div>
+                <div class="recent-title">recent experiences:</div>
                 <div class="roles-list">
                     <div class="role-card">
                         <div class="role-left">
