Add SiteSentinel to homepage recent experiences (newest first)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                 <div class="roles-list">
                     <div class="role-card">
                         <div class="role-left">
+                            <div class="role-logo">SS</div>
+                            <div class="role-info">
+                                <div class="role-company">SiteSentinel</div>
+                                <div class="role-position">creator — website security tool</div>
+                            </div>
+                        </div>
+                        <div class="role-date">2025</div>
+                    </div>
+                    <div class="role-card">
+                        <div class="role-left">
                             <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
                             <div class="role-info">
                                 <div class="role-company">university of waterloo</div>
