--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="contact-info">
                 <a href="mailto:ndarwin@uwaterloo.ca">ndarwin@uwaterloo.ca</a>
                 <a href="https://linkedin.com/in/nicholas-darwin" target="_blank">LinkedIn</a>
-                <a href="https://github.com/NicholasDarwin" target="_blank" rel="noopener">gituhb</a>
+                <a href="https://github.com/NicholasDarwin" target="_blank" rel="noopener">github</a>
             </div>
             <div class="scroll-indicator">↓</div>
         </section>
@@ -45,7 +45,7 @@
                         <div class="role-left">
                             <img src="assets/SiteSentinal-logo.svg" alt="SiteSentinel" class="role-logo">
                             <div class="role-info">
-                                <div class="role-company">SiteSentinel</div>
+                                <div class="role-company" style="color:#000;">SiteSentinel</div>
                                 <div class="role-position">creator — website security tool</div>
                             </div>
                         </div>
@@ -55,7 +55,7 @@
                         <div class="role-left">
                             <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
                             <div class="role-info">
-                                <div class="role-company">university of waterloo</div>
+                                <div class="role-company" style="color:#000;">university of waterloo</div>
                                 <div class="role-position">bachelor of computer science</div>
                             </div>
                         </div>
