Add comprehensive SEO optimization: meta tags, Open Graph, structured data, robots.txt, sitemap

--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Nicholas Darwin</title>
+    <meta name="description" content="About Nicholas Darwin - Computer Science student at the University of Waterloo with a passion for engineering, innovation, and technology. Learn about my education, certifications, and background.">
+    <meta name="keywords" content="Nicholas Darwin, About, Education, Computer Science, University of Waterloo, Certifications">
+    <link rel="canonical" href="https://nicholasdarwin.ca/about.html">
+    <title>About Nicholas Darwin - Computer Science Student | Education & Background</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
