--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Nicholas Darwin</title>
+    <meta name="description" content="Contact Nicholas Darwin for opportunities, collaborations, or inquiries. Connect via email, LinkedIn, or Instagram. Open to software development projects and professional networking.">
+    <meta name="keywords" content="Nicholas Darwin, Contact, Email, LinkedIn, Get in Touch, Collaboration, Opportunities">
+    <link rel="canonical" href="https://nicholasdarwin.ca/contact.html">
+    <title>Contact Nicholas Darwin | Get in Touch for Opportunities & Collaborations</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
