--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience - Nicholas Darwin</title>
+    <meta name="description" content="Nicholas Darwin's professional experience including leadership roles in engineering, audio-visual systems, teaching, and community service. View my work history and accomplishments.">
+    <meta name="keywords" content="Nicholas Darwin, Experience, Work History, Engineering Leadership, Audio Visual, Teaching Assistant, Professional Experience">
+    <link rel="canonical" href="https://nicholasdarwin.ca/experience.html">
+    <title>Experience - Nicholas Darwin | Professional Work History & Leadership</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
