--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Nicholas Darwin</title>
+    <meta name="description" content="Explore Nicholas Darwin's software projects including SiteSentinel (website security tool), EV Race Car development, and machine learning healthcare applications. View source code and live demos.">
+    <meta name="keywords" content="Nicholas Darwin, Projects, Portfolio, SiteSentinel, Software Development, Machine Learning, Electric Vehicle, Web Security">
+    <link rel="canonical" href="https://nicholasdarwin.ca/projects.html">
+    <title>Projects - Nicholas Darwin | Software Development Portfolio & Live Demos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
