--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Nicholas Darwin, About, Education, Computer Science, University of Waterloo, Certifications">
     <link rel="canonical" href="https://nicholasdarwin.ca/about.html">
     <title>About Nicholas Darwin - Computer Science Student | Education & Background</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -77,6 +78,10 @@
 
     <footer>
     </footer>
+
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+        <span id="theme-icon">🌙</span>
+    </button>
 
     <script src="script.js"></script>
 </body>
