--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Nicholas Darwin, Contact, Email, LinkedIn, Get in Touch, Collaboration, Opportunities">
     <link rel="canonical" href="https://nicholasdarwin.ca/contact.html">
     <title>Contact Nicholas Darwin | Get in Touch for Opportunities & Collaborations</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -50,6 +51,10 @@
 
     <footer>
     </footer>
+
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+        <span id="theme-icon">🌙</span>
+    </button>
 
     <script src="script.js"></script>
 </body>
