--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Nicholas Darwin, Experience, Work History, Engineering Leadership, Audio Visual, Teaching Assistant, Professional Experience">
     <link rel="canonical" href="https://nicholasdarwin.ca/experience.html">
     <title>Experience - Nicholas Darwin | Professional Work History & Leadership</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -97,6 +98,10 @@
 
     <footer>
     </footer>
+
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+        <span id="theme-icon">🌙</span>
+    </button>
 
     <script src="script.js"></script>
 </body>
