--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="twitter:image" content="https://nicholasdarwin.ca/assets/og-image.jpg">
     
     <title>Nicholas Darwin - Computer Science Student & Developer | Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -84,6 +85,10 @@
             </div>
         </section>
     </main>
+
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+        <span id="theme-icon">🌙</span>
+    </button>
 
     <script src="script.js"></script>
     
