--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Nicholas Darwin, Projects, Portfolio, SiteSentinel, Software Development, Machine Learning, Electric Vehicle, Web Security">
     <link rel="canonical" href="https://nicholasdarwin.ca/projects.html">
     <title>Projects - Nicholas Darwin | Software Development Portfolio & Live Demos</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -80,6 +81,10 @@
 
     <footer>
     </footer>
+
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+        <span id="theme-icon">🌙</span>
+    </button>
 
     <script src="script.js"></script>
 </body>
