Add UW logo image to homepage role card

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="role-card">
                         <div class="role-left">
-                            <div class="role-logo">UW</div>
+                            <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
                             <div class="role-info">
                                 <div class="role-company">University of Waterloo</div>
                                 <div class="role-position">computer science student</div>
