--- a/index.html
+++ b/index.html
@@ -66,16 +66,18 @@
             <div class="recent-roles">
                 <div class="recent-title">recent experiences:</div>
                 <div class="roles-list">
-                    <div class="role-card">
-                        <div class="role-left">
-                            <img src="assets/SiteSentinal-logo.svg" alt="SiteSentinel" class="role-logo">
-                            <div class="role-info">
-                                <div class="role-company">SiteSentinel</div>
-                                <div class="role-position">creator — website security tool</div>
+                    <a href="https://site-sentinel-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/SiteSentinal-logo.svg" alt="SiteSentinel" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">SiteSentinel</div>
+                                    <div class="role-position">creator — website security tool</div>
+                                </div>
                             </div>
+                            <div class="role-date">2025</div>
                         </div>
-                        <div class="role-date">2025</div>
-                    </div>
+                    </a>
                     <div class="role-card">
                         <div class="role-left">
                             <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
