Fix capitalization in recent experiences section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Recent roles (moved to home page) -->
         <section>
             <div class="recent-roles">
-                <div class="recent-title">recent experiences:</div>
+                <div class="recent-title">Recent Experiences:</div>
                 <div class="roles-list">
                     <a href="https://site-sentinel-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
                         <div class="role-card">
@@ -72,7 +72,7 @@
                                 <img src="assets/SiteSentinal-logo.svg" alt="SiteSentinel" class="role-logo">
                                 <div class="role-info">
                                     <div class="role-company">SiteSentinel</div>
-                                    <div class="role-position">creator — website security tool</div>
+                                    <div class="role-position">Creator — Website Security Tool</div>
                                 </div>
                             </div>
                             <div class="role-date">2025</div>
@@ -83,7 +83,7 @@
                             <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
                             <div class="role-info">
                                 <div class="role-company">University of Waterloo</div>
-                                <div class="role-position">computer science student</div>
+                                <div class="role-position">Computer Science Student</div>
                             </div>
                         </div>
                         <div class="role-date">2025 - present</div>
