--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,18 @@
                 <div class="experience-item">
                     <div class="experience-header">
                         <div>
+                            <h3>Machine Learning for Protein–Ligand Interaction Prediction</h3>
+                            <p class="company">University of Toronto</p>
+                        </div>
+                        <span class="date">2024</span>
+                    </div>
+                    <p class="project-description">Developed supervised ML models in PyTorch to predict protein–ligand binding using 10,000+ samples derived from PDB structure files and curated biochemical datasets. Preprocessed and engineered molecular features in Python using NumPy, pandas, and biochemical descriptors extracted from structural data. Trained and optimized models using gradient-based learning, cross-validation, and hyperparameter tuning. Evaluated performance with accuracy, precision, recall, and ROC-AUC, refining models based on diagnostics. Collaborated with University of Toronto faculty mentors to validate methodology and interpret biological significance.</p>
+                    <p class="project-tech-inline"><strong>Technologies:</strong> PyTorch, Python, NumPy, pandas, Machine Learning, Biochemistry, Cross-validation</p>
+                </div>
+
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div>
                             <h3>Cells in Focus</h3>
                             <p class="company">Machine Learning Healthcare Application</p>
                         </div>
