Make University of Waterloo card clickable

--- a/index.html
+++ b/index.html
@@ -78,16 +78,18 @@
                             <div class="role-date">2025</div>
                         </div>
                     </a>
-                    <div class="role-card">
-                        <div class="role-left">
-                            <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
-                            <div class="role-info">
-                                <div class="role-company">University of Waterloo</div>
-                                <div class="role-position">Computer Science Student</div>
+                    <a href="https://uwaterloo.ca/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">University of Waterloo</div>
+                                    <div class="role-position">Computer Science Student</div>
+                                </div>
                             </div>
+                            <div class="role-date">2025 - present</div>
                         </div>
-                        <div class="role-date">2025 - present</div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
