--- a/experience.html
+++ b/experience.html
@@ -39,6 +39,21 @@
                 <div class="experience-item">
                     <div class="experience-header">
                         <div>
+                            <h3>Machine Learning Research</h3>
+                            <p class="company">University of Toronto</p>
+                            <p class="location">Toronto, Ontario</p>
+                        </div>
+                        <span class="date">Dec 2024 – Jun 2025</span>
+                    </div>
+                    <ul class="experience-details">
+                        <li>Built and optimized PyTorch models to predict protein–ligand binding using 10,000+ samples</li>
+                        <li>Collaborated with University of Toronto professors to validate results for drug discovery applications</li>
+                    </ul>
+                </div>
+
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div>
                             <h3>Co-Founder & Leader</h3>
                             <p class="company">Libermann Engineering</p>
                             <p class="location">Francis Libermann Catholic High School, Toronto, Ontario</p>
