Change Professional Experience to Experience, add ML Research to home page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
             <div class="recent-roles">
                 <div class="recent-title">Recent Experiences:</div>
                 <div class="roles-list">
+                    <a href="https://www.utoronto.ca/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/uoft-logo.svg" alt="University of Toronto" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">University of Toronto</div>
+                                    <div class="role-position">Machine Learning Research</div>
+                                </div>
+                            </div>
+                            <div class="role-date">Dec 2024 – Jun 2025</div>
+                        </div>
+                    </a>
                     <a href="https://site-sentinel-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
                         <div class="role-card">
                             <div class="role-left">
