--- a/experience.html
+++ b/experience.html
@@ -34,7 +34,7 @@
 
     <main>
         <section>
-            <h2 class="section-title">Professional Experience</h2>
+            <h2 class="section-title">Experience</h2>
             <div class="experience-list">
                 <div class="experience-item">
                     <div class="experience-header">
