Link UofT card to experience page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="recent-roles">
                 <div class="recent-title">Recent Experiences:</div>
                 <div class="roles-list">
-                    <a href="https://www.utoronto.ca/" target="_blank" rel="noopener" class="role-card-link">
+                    <a href="experience.html" class="role-card-link">
                         <div class="role-card">
                             <div class="role-left">
                                 <img src="assets/uoft-logo.svg" alt="University of Toronto" class="role-logo">
