Add Teaching Assistant to home page, update experience dates

--- a/experience.html
+++ b/experience.html
@@ -58,7 +58,7 @@
                             <p class="company">Libermann Engineering</p>
                             <p class="location">Francis Libermann Catholic High School, Toronto, Ontario</p>
                         </div>
-                        <span class="date">2023 – Present</span>
+                        <span class="date">Sep 2023 – May 2025</span>
                     </div>
                     <ul class="experience-details">
                         <li>Established a secondary-level engineering team and transformed it into a professional unit</li>
@@ -95,13 +95,11 @@
                             <p class="company">Licensed2Learn</p>
                             <p class="location">Toronto, Ontario</p>
                         </div>
-                        <span class="date">2022 – 2023</span>
+                        <span class="date">Sep 2023 – Jun 2025</span>
                     </div>
                     <ul class="experience-details">
-                        <li>Assisted teachers in preparing and delivering STEM lesson materials</li>
-                        <li>Tutored students individually and in small groups</li>
-                        <li>Graded assignments and provided constructive feedback</li>
-                        <li>Managed classroom technology and supported lab activities</li>
+                        <li>Supported Grade 12 students in math and science by breaking down complex concepts</li>
+                        <li>Helped improve academic performance through personalized guidance</li>
                     </ul>
             </div>
 
