--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
                     <a href="experience.html" class="role-card-link">
                         <div class="role-card">
                             <div class="role-left">
+                                <img src="assets/l2l-logo.svg" alt="Licensed2Learn" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">Licensed2Learn</div>
+                                    <div class="role-position">Teaching Assistant</div>
+                                </div>
+                            </div>
+                            <div class="role-date">Sep 2023 – Jun 2025</div>
+                        </div>
+                    </a>
+                    <a href="experience.html" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
                                 <img src="assets/uoft-logo.svg" alt="University of Toronto" class="role-logo">
                                 <div class="role-info">
                                     <div class="role-company">University of Toronto</div>
