Update experience page formatting, remove L2L from home page

--- a/experience.html
+++ b/experience.html
@@ -101,25 +101,34 @@
                         <li>Supported Grade 12 students in math and science by breaking down complex concepts</li>
                         <li>Helped improve academic performance through personalized guidance</li>
                     </ul>
-            </div>
+                </div>
 
-            <div class="card">
-                <h3>Volunteer Coordinator</h3>
-                <h4>ACSA Community Services</h4>
-                <p class="date">Jul 2024 - Aug 2024 · 2 mos</p>
-                <p class="location">Toronto, ON</p>
-                <ul>
-                    <li>Managed front reception and appointment scheduling</li>
-                    <li>Assisted clients, including translation for non-English speakers</li>
-                    <li>Handled general tasks such as prepping donations and stacking shipments</li>
-                </ul>
-            </div>
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div>
+                            <h3>Volunteer Coordinator</h3>
+                            <p class="company">ACSA Community Services</p>
+                            <p class="location">Toronto, Ontario</p>
+                        </div>
+                        <span class="date">Jul 2024 – Aug 2024</span>
+                    </div>
+                    <ul class="experience-details">
+                        <li>Managed front reception and appointment scheduling</li>
+                        <li>Assisted clients, including translation for non-English speakers</li>
+                        <li>Handled general tasks such as prepping donations and stacking shipments</li>
+                    </ul>
+                </div>
 
-            <div class="card">
-                <h3>Volunteer Instructor</h3>
-                <h4>English Language Campus - Viswamadhu, Vanni Sri Lanka</h4>
-                <p class="date">Jul 2017 - Aug 2017 · 2 mos</p>
-                <p class="location">Sri Lanka</p>
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div>
+                            <h3>Volunteer Instructor</h3>
+                            <p class="company">English Language Campus - Viswamadhu, Vanni Sri Lanka</p>
+                            <p class="location">Sri Lanka</p>
+                        </div>
+                        <span class="date">Jul 2017 – Aug 2017</span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
