Remove background texture from all pages

--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
     <main>
         <section>
             <h2 class="section-title">About Me</h2>
+            <h1 class="fancy-name">Nicholas Darwin</h1>
             <div class="about-content">
                 <p>
                     I'm a Computer Science student at the University of Waterloo with a passion for engineering, 
