Add CipherGuard project as second project on site

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
                             <div class="role-date">Dec 2024 – Jun 2025</div>
                         </div>
                     </a>
+                    <a href="https://cipher-guard-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/SiteSentinal-logo.svg" alt="CipherGuard" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">CipherGuard</div>
+                                    <div class="role-position">Creator — AI Security Scanner</div>
+                                </div>
+                            </div>
+                            <div class="role-date">2025</div>
+                        </div>
+                    </a>
                     <a href="https://site-sentinel-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
                         <div class="role-card">
                             <div class="role-left">
