--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,21 @@
                 <div class="experience-item">
                     <div class="experience-header">
                         <div>
+                            <h3>CipherGuard</h3>
+                            <p class="company">AI-Powered GitHub Security Scanner</p>
+                        </div>
+                        <span class="date">2025</span>
+                    </div>
+                    <p class="project-description">Built an AI-driven tool for static code analysis, dependency vulnerability checks, and secret detection on GitHub repositories. Leveraged Gemini AI for automated threat modeling, risk scoring, and real-time remediation guidance. Integrated ESLint for comprehensive code quality analysis and linting, Snyk for automated dependency vulnerability detection and detailed reporting, and dotenv for secure environment variable secrets management. Developed responsive dashboards for repo submission and scan management with robust error handling and logging.</p>
+                    <p class="project-tech-inline"><strong>Technologies:</strong> Gemini AI, Node.js, JavaScript, React, Express.js, GitHub API, ESLint, Snyk, dotenv</p>
+                    <div class="project-links">
+                        <a href="https://cipher-guard-delta.vercel.app/" target="_blank" rel="noopener">Live Demo</a>
+                    </div>
+                </div>
+
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div>
                             <h3>Electric Vehicle Race Car</h3>
                             <p class="company">University of Waterloo</p>
                         </div>
