Add CipherGuard AI Security Scanner to featured projects on home page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,27 @@
             <div class="scroll-indicator">↓</div>
         </section>
         
+        <!-- Featured Projects -->
+        <section class="featured-projects">
+            <h2 class="section-title">Featured Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3>CipherGuard – AI-Powered GitHub Security Scanner</h3>
+                    <p class="project-meta">Gemini AI, Node.js, JavaScript, React, Express.js</p>
+                    <ul class="project-highlights">
+                        <li>Built an AI-driven tool for static code analysis, dependency vulnerability checks, and secret detection on GitHub repositories using React, Express.js, and GitHub API integration.</li>
+                        <li>Leveraged Gemini AI for automated threat modeling, risk scoring, and real-time remediation guidance.</li>
+                        <li>Integrated ESLint for comprehensive code quality analysis and linting, Snyk for automated dependency vulnerability detection and detailed reporting, and dotenv for secure environment variable secrets management.</li>
+                        <li>Developed responsive dashboards for repo submission and scan management with robust error handling and logging</li>
+                    </ul>
+                    <div class="project-links">
+                        <a href="https://cipher-guard-delta.vercel.app/" target="_blank" rel="noopener">Live Demo</a>
+                        <a href="projects.html">View More Projects</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Recent roles (moved to home page) -->
         <section>
             <div class="recent-roles">
