Replace CipherGuard logo with cipherguard.svg

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <a href="https://cipher-guard-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
                         <div class="role-card">
                             <div class="role-left">
-                                <img src="assets/SiteSentinal-logo.svg" alt="CipherGuard" class="role-logo">
+                                <img src="assets/cipherguard.svg" alt="CipherGuard" class="role-logo">
                                 <div class="role-info">
                                     <div class="role-company">CipherGuard</div>
                                     <div class="role-position">Creator — AI Security Scanner</div>
