--- a/index.html
+++ b/index.html
@@ -61,7 +61,64 @@
             <div class="scroll-indicator">↓</div>
         </section>
         
-        <!-- Featured Projects -->
+        <!-- Recent roles (moved to home page) -->
+        <section>
+            <div class="recent-roles">
+                <div class="recent-title">Recent Experiences:</div>
+                <div class="roles-list">
+                    <a href="experience.html" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/uoft-logo.svg" alt="University of Toronto" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">University of Toronto</div>
+                                    <div class="role-position">Machine Learning Research</div>
+                                </div>
+                            </div>
+                            <div class="role-date">Dec 2024 – Jun 2025</div>
+                        </div>
+                    </a>
+                    <a href="https://cipher-guard-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/cipherguard.svg" alt="CipherGuard" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">CipherGuard</div>
+                                    <div class="role-position">Creator — AI Security Scanner</div>
+                                </div>
+                            </div>
+                            <div class="role-date">2025</div>
+                        </div>
+                    </a>
+                    <a href="https://site-sentinel-delta.vercel.app/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/SiteSentinal-logo.svg" alt="SiteSentinel" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">SiteSentinel</div>
+                                    <div class="role-position">Creator — Website Security Tool</div>
+                                </div>
+                            </div>
+                            <div class="role-date">2025</div>
+                        </div>
+                    </a>
+                    <a href="https://uwaterloo.ca/" target="_blank" rel="noopener" class="role-card-link">
+                        <div class="role-card">
+                            <div class="role-left">
+                                <img src="assets/waterloo-logo.svg" alt="University of Waterloo" class="role-logo">
+                                <div class="role-info">
+                                    <div class="role-company">University of Waterloo</div>
+                                    <div class="role-position">Computer Science Student</div>
+                                </div>
+                            </div>
+                            <div class="role-date">2025 - present</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Featured Projects (moved below experiences) -->
         <section class="featured-projects">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
